--- a/pom.xml
+++ b/pom.xml
@@ -29,6 +29,11 @@
 			<artifactId>ocamljava</artifactId>
 			<version>2.0-early-access11</version>
 		</dependency>
+		<dependency>
+			<groupId>fr.x9c</groupId>
+			<artifactId>ocaml-lib-files</artifactId>
+			<version>2.0-early-access11</version>
+		</dependency>
 	</dependencies>
 	<build>
 		<plugins>
