--- a/pom.xml
+++ b/pom.xml
@@ -39,6 +39,11 @@
 			<artifactId>commons-io</artifactId>
 			<version>2.1</version>
 		</dependency>
+		<dependency>
+			<groupId>org.apache.maven</groupId>
+			<artifactId>maven-project</artifactId>
+			<version>2.0.6</version>
+		</dependency>
 	</dependencies>
 	<build>
 		<plugins>
@@ -51,6 +56,6 @@
 					<target>1.7</target>
 				</configuration>
 			</plugin>
-	</plugins>
+		</plugins>
 	</build>
 </project>
