--- a/pom.xml
+++ b/pom.xml
@@ -66,6 +66,11 @@
 					<target>1.7</target>
 				</configuration>
 			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-plugin-plugin</artifactId>
+				<version>3.3</version>
+			</plugin>
 		</plugins>
 	</build>
 </project>
