--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 	<artifactId>ocamljava-maven-plugin</artifactId>
 	<packaging>maven-plugin</packaging>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>ocamljava-maven-plugin Maven Mojo</name>
+	<name>Ocaml Java Maven Plugin</name>
 	<url>http://maven.apache.org</url>
 	<dependencies>
 		<dependency>
