--- a/pom.xml
+++ b/pom.xml
@@ -107,4 +107,14 @@
 		</license>
 	</licenses>
 	
+	<reporting>
+    <plugins>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-plugin-plugin</artifactId>
+        <version>2.9</version>
+      </plugin>
+    </plugins>
+  </reporting>    
+  
 </project>
