--- a/ocamljava-maven-plugin/pom.xml
+++ b/ocamljava-maven-plugin/pom.xml
@@ -1,10 +1,13 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-	<groupId>mandelbrot</groupId>
+	<parent>
+		<groupId>mandelbrot</groupId>
+		<artifactId>ocamljava-maven-plugin-root</artifactId>
+		<version>0.0.1-SNAPSHOT</version>
+	</parent>
 	<artifactId>ocamljava-maven-plugin</artifactId>
 	<packaging>maven-plugin</packaging>
-	<version>0.0.1-SNAPSHOT</version>
 	<name>Ocaml Java Maven Plugin</name>
 	<url>https://github.com/struktured/ocamljava-maven-plugin</url>
 	<prerequisites>
