--- a/pom.xml
+++ b/pom.xml
@@ -1,3 +1,4 @@
+<?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
@@ -63,6 +64,11 @@
 				<artifactId>maven-project</artifactId>
 				<version>2.0.6</version>
 			</dependency>
+			<dependency>
+				<groupId>org.apache.commons</groupId>
+				<artifactId>commons-math</artifactId>
+				<version>2.2</version>
+			</dependency>
 		</dependencies>
 	</dependencyManagement>
 	<scm>
@@ -106,5 +112,6 @@
 	<modules>
 		<module>ocamljava-maven-plugin</module>
 		<module>ocamljava-plugin-test</module>
+		<module>ocamljava-dependency-analyzer</module>
 	</modules>
 </project>
