--- a/pom.xml
+++ b/pom.xml
@@ -110,6 +110,7 @@
 		</plugins>
 	</reporting>
 	<modules>
+		<module>ocamljava-maven-common</module>
 		<module>ocamljava-maven-plugin</module>
 		<module>ocamljava-plugin-test</module>
 		<module>ocamljava-dependency-analyzer</module>
