--- a/ocamljava-maven-plugin/pom.xml
+++ b/ocamljava-maven-plugin/pom.xml
@@ -55,6 +55,11 @@
 			<groupId>org.apache.maven</groupId>
 			<artifactId>maven-project</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>mandelbrot</groupId>
+			<artifactId>ocamljava-maven-common</artifactId>
+			<version>${project.version}</version>
+		</dependency>
 	</dependencies>
 	<build>
 		<plugins>
