various fixes but wrapping still fails

--- a/ocamljava-maven-plugin/pom.xml
+++ b/ocamljava-maven-plugin/pom.xml
@@ -60,6 +60,12 @@
 			<artifactId>ocamljava-maven-common</artifactId>
 			<version>${project.version}</version>
 		</dependency>
+		<dependency>
+			<groupId>mandelbrot</groupId>
+			<artifactId>ocamljava-dependency-analyzer</artifactId>
+			<version>${project.version}</version>
+		</dependency>
+		
 	</dependencies>
 	<build>
 		<plugins>
