--- a/pom.xml
+++ b/pom.xml
@@ -71,6 +71,26 @@
 			</dependency>
 		</dependencies>
 	</dependencyManagement>
+	<build>
+		<pluginManagement>
+			<plugins>
+				<plugin>
+					<groupId>org.apache.maven.plugins</groupId>
+					<artifactId>maven-compiler-plugin</artifactId>
+					<version>3.1</version>
+					<configuration>
+						<source>1.7</source>
+						<target>1.7</target>
+					</configuration>
+				</plugin>
+				<plugin>
+					<groupId>org.apache.maven.plugins</groupId>
+					<artifactId>maven-plugin-plugin</artifactId>
+					<version>3.3</version>
+				</plugin>
+			</plugins>
+		</pluginManagement>
+	</build>
 	<scm>
 		<connection>scm:git:https://github.com/struktured/ocamljava-maven-plugin.git</connection>
 		<developerConnection>scm:git:git@github.com:struktured/ocamljava-maven-plugin.git</developerConnection>
