--- a/ocamljava-maven-plugin/pom.xml
+++ b/ocamljava-maven-plugin/pom.xml
@@ -65,7 +65,7 @@
 			<artifactId>ocamljava-dependency-analyzer</artifactId>
 			<version>${project.version}</version>
 		</dependency>
-		
+
 	</dependencies>
 	<build>
 		<plugins>
@@ -86,11 +86,15 @@
 				<artifactId>maven-jar-plugin</artifactId>
 				<version>2.4</version>
 			</plugin>
-			
+
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-site-plugin</artifactId>
 				<version>3.3</version>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-plugin-plugin</artifactId>
 			</plugin>
 		</plugins>
 	</build>
@@ -123,14 +127,20 @@
 		<plugins>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-plugin-plugin</artifactId>
-				<version>2.9</version>
+				<artifactId>maven-project-info-reports-plugin</artifactId>
+				<version>2.7</version>
 			</plugin>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-jxr-plugin</artifactId>
 				<version>2.4</version>
+			</plugin>	
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-plugin-plugin</artifactId>
+				<version>3.3</version>
 			</plugin>
+		
 		</plugins>
 	</reporting>
 
