--- a/ocamljava-dependency-analyzer/pom.xml
+++ b/ocamljava-dependency-analyzer/pom.xml
@@ -49,14 +49,16 @@
 			<artifactId>ocamljava-maven-common</artifactId>
 			<version>${project.version}</version>
 		</dependency>
-		
+			<dependency>
+				<groupId>org.codehaus.jackson</groupId>
+				<artifactId>jackson-mapper-asl</artifactId>
+			</dependency>	
 	</dependencies>
 	<build>
 		<plugins>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
-				<version>2.0.2</version>
 				<configuration>
 					<source>1.7</source>
 					<target>1.7</target>
