--- a/pom.xml
+++ b/pom.xml
@@ -73,6 +73,11 @@
 				<artifactId>commons-math</artifactId>
 				<version>2.2</version>
 			</dependency>
+			<dependency>
+				<groupId>org.codehaus.jackson</groupId>
+				<artifactId>jackson-mapper-asl</artifactId>
+				<version>1.9.13</version>
+			</dependency>
 		</dependencies>
 	</dependencyManagement>
 	<build>
