javadoc, small various touchups

--- a/ocamljava-plugin-test/ocamljava-lib-test/pom.xml
+++ b/ocamljava-plugin-test/ocamljava-lib-test/pom.xml
@@ -76,5 +76,11 @@
 			<artifactId>guava</artifactId>
 			<scope>compile</scope>
 		</dependency>
+		<dependency>
+			<groupId>fr.x9c</groupId>
+			<artifactId>ocamljava</artifactId>
+			<scope>compile</scope>
+		</dependency>
 	</dependencies>
+	
 </project>
