--- a/ocamljava-dependency-analyzer/pom.xml
+++ b/ocamljava-dependency-analyzer/pom.xml
@@ -45,10 +45,14 @@
 			<artifactId>ocamljava-maven-common</artifactId>
 			<version>${project.version}</version>
 		</dependency>
-			<dependency>
-				<groupId>org.codehaus.jackson</groupId>
-				<artifactId>jackson-mapper-asl</artifactId>
-			</dependency>	
+		<dependency>
+			<groupId>org.codehaus.jackson</groupId>
+			<artifactId>jackson-mapper-asl</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>fr.x9c</groupId>
+			<artifactId>ocamldep</artifactId>
+		</dependency>
 	</dependencies>
 	<build>
 		<plugins>
