--- a/ocamljava-plugin-test/ocamljava-lib-test/pom.xml
+++ b/ocamljava-plugin-test/ocamljava-lib-test/pom.xml
@@ -23,17 +23,17 @@
 				</configuration>
 			</plugin>
 			<plugin>
+				<groupId>mandelbrot</groupId>
+				<artifactId>ocamljava-maven-plugin</artifactId>
 				<executions>
 					<execution>
+						<id>ocaml-compile</id>
 						<phase>compile</phase>
 						<goals>
 							<goal>compile</goal>
 						</goals>
 					</execution>
 					<execution>
-						<configuration>
-							<!-- <targetJar>${project.artifactId}-${project.version}.jar</targetJar> -->
-						</configuration>
 						<id>ocaml-jar</id>
 						<phase>package</phase>
 						<goals>
@@ -41,9 +41,7 @@
 						</goals>
 					</execution>
 				</executions>
-				<groupId>mandelbrot</groupId>
-				<artifactId>ocamljava-maven-plugin</artifactId>
-			</plugin>
+		</plugin>
 		</plugins>
 	</build>
 	<dependencies>
