--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,7 @@
 	<properties>
 		<maven.compiler.source>1.7</maven.compiler.source>
 		<maven.compiler.target>1.7</maven.compiler.target>
+		<ocamljava.version>2.0-early-access11</ocamljava.version>
 	</properties>
 	<dependencyManagement>
 		<dependencies>
@@ -46,17 +47,17 @@
 			<dependency>
 				<groupId>fr.x9c</groupId>
 				<artifactId>ocamljava</artifactId>
-				<version>2.0-early-access11</version>
+				<version>${ocamljava.version}</version>
 			</dependency>
 			<dependency>
 				<groupId>fr.x9c</groupId>
 				<artifactId>ocamlwrap</artifactId>
-				<version>2.0-early-access11</version>
+				<version>${ocamljava.version}</version>
 			</dependency>
 			<dependency>
 				<groupId>fr.x9c</groupId>
 				<artifactId>ocaml-lib-files</artifactId>
-				<version>2.0-early-access11</version>
+				<version>${ocamljava.version}</version>
 			</dependency>
 			<dependency>
 				<groupId>commons-io</groupId>
@@ -77,6 +78,11 @@
 				<groupId>org.codehaus.jackson</groupId>
 				<artifactId>jackson-mapper-asl</artifactId>
 				<version>1.9.13</version>
+			</dependency>
+			<dependency>
+				<groupId>fr.x9c</groupId>
+				<artifactId>ocamldep</artifactId>
+				<version>${ocamljava.version}</version>
 			</dependency>
 		</dependencies>
 	</dependencyManagement>
