partially working forking of maven plugins, when necessary

--- a/ocamljava-maven-plugin/pom.xml
+++ b/ocamljava-maven-plugin/pom.xml
@@ -61,7 +61,10 @@
 			<artifactId>ocamljava-dependency-analyzer</artifactId>
 			<version>${project.version}</version>
 		</dependency>
-
+		<dependency>
+				<groupId>org.apache.maven.shared</groupId>
+				<artifactId>maven-invoker</artifactId>
+		</dependency>
 	</dependencies>
 	<build>
 		<plugins>
