--- a/pom.xml
+++ b/pom.xml
@@ -84,6 +84,11 @@
 				<artifactId>ocamldep</artifactId>
 				<version>${ocamljava.version}</version>
 			</dependency>
+			<dependency>
+				<groupId>org.apache.maven.shared</groupId>
+				<artifactId>maven-invoker</artifactId>
+				<version>2.1.1</version>
+			</dependency>
 		</dependencies>
 	</dependencyManagement>
 	<build>
