soccer simulator package name

--- a/presentation/world-cup/world-cup-lib/pom.xml
+++ b/presentation/world-cup/world-cup-lib/pom.xml
@@ -25,6 +25,7 @@
 			<plugin>
 				<groupId>mandelbrot</groupId>
 				<artifactId>ocamljava-maven-plugin</artifactId>
+				<configuration><packageName>soccer.simulator</packageName></configuration>
 				<executions>
 					<execution>
 						<id>ocaml-compile</id>
