use mojo annotation

--- a/ocamljava-maven-plugins/ocamljava-maven-plugin/.project
+++ b/ocamljava-maven-plugins/ocamljava-maven-plugin/.project
@@ -1,23 +1,23 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>ocamljava-maven-plugin</name>
-	<comment></comment>
-	<projects>
-	</projects>
-	<buildSpec>
-		<buildCommand>
-			<name>org.eclipse.jdt.core.javabuilder</name>
-			<arguments>
-			</arguments>
-		</buildCommand>
-		<buildCommand>
-			<name>org.eclipse.m2e.core.maven2Builder</name>
-			<arguments>
-			</arguments>
-		</buildCommand>
-	</buildSpec>
-	<natures>
-		<nature>org.eclipse.jdt.core.javanature</nature>
-		<nature>org.eclipse.m2e.core.maven2Nature</nature>
-	</natures>
+  <name>ocamljava-maven-plugin</name>
+  <comment>This plugin provides maven integration for ocaml java. See http://ocamljava.x9c.fr for details on that specific project. The important thing to know is it&apos;s a pure java solution to integrating ocaml code with the JVM, and this project provides the necessary maven integration. NO_M2ECLIPSE_SUPPORT: Project files created with the maven-eclipse-plugin are not supported in M2Eclipse.</comment>
+  <projects>
+    <project>ocamljava-maven-common</project>
+    <project>ocamljava-dependency-analyzer</project>
+    <project>ocamljava-maven-plugin-base</project>
+    <project>ocamljava-compiler-maven-plugin</project>
+  </projects>
+  <buildSpec>
+    <buildCommand>
+      <name>org.eclipse.jdt.core.javabuilder</name>
+    </buildCommand>
+    <buildCommand>
+      <name>org.eclipse.m2e.core.maven2Builder</name>
+    </buildCommand>
+  </buildSpec>
+  <natures>
+    <nature>org.eclipse.jdt.core.javanature</nature>
+    <nature>org.eclipse.m2e.core.maven2Nature</nature>
+  </natures>
 </projectDescription>
