--- a/ocamljava-maven-plugins/ocamljava-compiler-maven-plugin/.classpath
+++ b/ocamljava-maven-plugins/ocamljava-compiler-maven-plugin/.classpath
@@ -1,26 +1,186 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
-	<classpathentry kind="src" output="target/classes" path="src/main/java">
-		<attributes>
-			<attribute name="optional" value="true"/>
-			<attribute name="maven.pomderived" value="true"/>
-		</attributes>
-	</classpathentry>
-	<classpathentry kind="src" output="target/test-classes" path="src/test/java">
-		<attributes>
-			<attribute name="optional" value="true"/>
-			<attribute name="maven.pomderived" value="true"/>
-		</attributes>
-	</classpathentry>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.7">
-		<attributes>
-			<attribute name="maven.pomderived" value="true"/>
-		</attributes>
-	</classpathentry>
-	<classpathentry kind="con" path="org.eclipse.m2e.MAVEN2_CLASSPATH_CONTAINER">
-		<attributes>
-			<attribute name="maven.pomderived" value="true"/>
-		</attributes>
-	</classpathentry>
-	<classpathentry kind="output" path="target/classes"/>
+  <classpathentry kind="src" path="src/main/java" including="**/*.java"/>
+  <classpathentry kind="src" path="target/generated-sources/plugin" including="**/*.java"/>
+  <classpathentry kind="output" path="target/classes"/>
+  <classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
+  <classpathentry kind="var" path="M2_REPO/org/apache/maven/maven-plugin-api/3.0/maven-plugin-api-3.0.jar" sourcepath="M2_REPO/org/apache/maven/maven-plugin-api/3.0/maven-plugin-api-3.0-sources.jar">
+    <attributes>
+      <attribute value="jar:file:/home/cpiccion/.m2/repository/org/apache/maven/maven-plugin-api/3.0/maven-plugin-api-3.0-javadoc.jar!/" name="javadoc_location"/>
+    </attributes>
+  </classpathentry>
+  <classpathentry kind="var" path="M2_REPO/org/apache/maven/maven-model/3.0/maven-model-3.0.jar" sourcepath="M2_REPO/org/apache/maven/maven-model/3.0/maven-model-3.0-sources.jar">
+    <attributes>
+      <attribute value="jar:file:/home/cpiccion/.m2/repository/org/apache/maven/maven-model/3.0/maven-model-3.0-javadoc.jar!/" name="javadoc_location"/>
+    </attributes>
+  </classpathentry>
+  <classpathentry kind="var" path="M2_REPO/org/codehaus/plexus/plexus-utils/2.0.4/plexus-utils-2.0.4.jar" sourcepath="M2_REPO/org/codehaus/plexus/plexus-utils/2.0.4/plexus-utils-2.0.4-sources.jar">
+    <attributes>
+      <attribute value="jar:file:/home/cpiccion/.m2/repository/org/codehaus/plexus/plexus-utils/2.0.4/plexus-utils-2.0.4-javadoc.jar!/" name="javadoc_location"/>
+    </attributes>
+  </classpathentry>
+  <classpathentry kind="var" path="M2_REPO/org/apache/maven/maven-artifact/3.0/maven-artifact-3.0.jar" sourcepath="M2_REPO/org/apache/maven/maven-artifact/3.0/maven-artifact-3.0-sources.jar">
+    <attributes>
+      <attribute value="jar:file:/home/cpiccion/.m2/repository/org/apache/maven/maven-artifact/3.0/maven-artifact-3.0-javadoc.jar!/" name="javadoc_location"/>
+    </attributes>
+  </classpathentry>
+  <classpathentry kind="var" path="M2_REPO/org/sonatype/sisu/sisu-inject-plexus/1.4.2/sisu-inject-plexus-1.4.2.jar" sourcepath="M2_REPO/org/sonatype/sisu/sisu-inject-plexus/1.4.2/sisu-inject-plexus-1.4.2-sources.jar">
+    <attributes>
+      <attribute value="jar:file:/home/cpiccion/.m2/repository/org/sonatype/sisu/sisu-inject-plexus/1.4.2/sisu-inject-plexus-1.4.2-javadoc.jar!/" name="javadoc_location"/>
+    </attributes>
+  </classpathentry>
+  <classpathentry kind="var" path="M2_REPO/org/codehaus/plexus/plexus-component-annotations/1.5.5/plexus-component-annotations-1.5.5.jar" sourcepath="M2_REPO/org/codehaus/plexus/plexus-component-annotations/1.5.5/plexus-component-annotations-1.5.5-sources.jar">
+    <attributes>
+      <attribute value="jar:file:/home/cpiccion/.m2/repository/org/codehaus/plexus/plexus-component-annotations/1.5.5/plexus-component-annotations-1.5.5-javadoc.jar!/" name="javadoc_location"/>
+    </attributes>
+  </classpathentry>
+  <classpathentry kind="var" path="M2_REPO/org/codehaus/plexus/plexus-classworlds/2.2.3/plexus-classworlds-2.2.3.jar" sourcepath="M2_REPO/org/codehaus/plexus/plexus-classworlds/2.2.3/plexus-classworlds-2.2.3-sources.jar">
+    <attributes>
+      <attribute value="jar:file:/home/cpiccion/.m2/repository/org/codehaus/plexus/plexus-classworlds/2.2.3/plexus-classworlds-2.2.3-javadoc.jar!/" name="javadoc_location"/>
+    </attributes>
+  </classpathentry>
+  <classpathentry kind="var" path="M2_REPO/org/sonatype/sisu/sisu-inject-bean/1.4.2/sisu-inject-bean-1.4.2.jar" sourcepath="M2_REPO/org/sonatype/sisu/sisu-inject-bean/1.4.2/sisu-inject-bean-1.4.2-sources.jar">
+    <attributes>
+      <attribute value="jar:file:/home/cpiccion/.m2/repository/org/sonatype/sisu/sisu-inject-bean/1.4.2/sisu-inject-bean-1.4.2-javadoc.jar!/" name="javadoc_location"/>
+    </attributes>
+  </classpathentry>
+  <classpathentry kind="var" path="M2_REPO/org/sonatype/sisu/sisu-guice/2.1.7/sisu-guice-2.1.7-noaop.jar"/>
+  <classpathentry kind="var" path="M2_REPO/org/apache/maven/maven-core/3.0/maven-core-3.0.jar" sourcepath="M2_REPO/org/apache/maven/maven-core/3.0/maven-core-3.0-sources.jar">
+    <attributes>
+      <attribute value="jar:file:/home/cpiccion/.m2/repository/org/apache/maven/maven-core/3.0/maven-core-3.0-javadoc.jar!/" name="javadoc_location"/>
+    </attributes>
+  </classpathentry>
+  <classpathentry kind="var" path="M2_REPO/org/apache/maven/maven-settings/3.0/maven-settings-3.0.jar" sourcepath="M2_REPO/org/apache/maven/maven-settings/3.0/maven-settings-3.0-sources.jar">
+    <attributes>
+      <attribute value="jar:file:/home/cpiccion/.m2/repository/org/apache/maven/maven-settings/3.0/maven-settings-3.0-javadoc.jar!/" name="javadoc_location"/>
+    </attributes>
+  </classpathentry>
+  <classpathentry kind="var" path="M2_REPO/org/apache/maven/maven-settings-builder/3.0/maven-settings-builder-3.0.jar" sourcepath="M2_REPO/org/apache/maven/maven-settings-builder/3.0/maven-settings-builder-3.0-sources.jar">
+    <attributes>
+      <attribute value="jar:file:/home/cpiccion/.m2/repository/org/apache/maven/maven-settings-builder/3.0/maven-settings-builder-3.0-javadoc.jar!/" name="javadoc_location"/>
+    </attributes>
+  </classpathentry>
+  <classpathentry kind="var" path="M2_REPO/org/codehaus/plexus/plexus-interpolation/1.14/plexus-interpolation-1.14.jar" sourcepath="M2_REPO/org/codehaus/plexus/plexus-interpolation/1.14/plexus-interpolation-1.14-sources.jar">
+    <attributes>
+      <attribute value="jar:file:/home/cpiccion/.m2/repository/org/codehaus/plexus/plexus-interpolation/1.14/plexus-interpolation-1.14-javadoc.jar!/" name="javadoc_location"/>
+    </attributes>
+  </classpathentry>
+  <classpathentry kind="var" path="M2_REPO/org/sonatype/plexus/plexus-sec-dispatcher/1.3/plexus-sec-dispatcher-1.3.jar" sourcepath="M2_REPO/org/sonatype/plexus/plexus-sec-dispatcher/1.3/plexus-sec-dispatcher-1.3-sources.jar">
+    <attributes>
+      <attribute value="jar:file:/home/cpiccion/.m2/repository/org/sonatype/plexus/plexus-sec-dispatcher/1.3/plexus-sec-dispatcher-1.3-javadoc.jar!/" name="javadoc_location"/>
+    </attributes>
+  </classpathentry>
+  <classpathentry kind="var" path="M2_REPO/org/sonatype/plexus/plexus-cipher/1.4/plexus-cipher-1.4.jar" sourcepath="M2_REPO/org/sonatype/plexus/plexus-cipher/1.4/plexus-cipher-1.4-sources.jar">
+    <attributes>
+      <attribute value="jar:file:/home/cpiccion/.m2/repository/org/sonatype/plexus/plexus-cipher/1.4/plexus-cipher-1.4-javadoc.jar!/" name="javadoc_location"/>
+    </attributes>
+  </classpathentry>
+  <classpathentry kind="var" path="M2_REPO/org/apache/maven/maven-repository-metadata/3.0/maven-repository-metadata-3.0.jar" sourcepath="M2_REPO/org/apache/maven/maven-repository-metadata/3.0/maven-repository-metadata-3.0-sources.jar">
+    <attributes>
+      <attribute value="jar:file:/home/cpiccion/.m2/repository/org/apache/maven/maven-repository-metadata/3.0/maven-repository-metadata-3.0-javadoc.jar!/" name="javadoc_location"/>
+    </attributes>
+  </classpathentry>
+  <classpathentry kind="var" path="M2_REPO/org/apache/maven/maven-model-builder/3.0/maven-model-builder-3.0.jar" sourcepath="M2_REPO/org/apache/maven/maven-model-builder/3.0/maven-model-builder-3.0-sources.jar">
+    <attributes>
+      <attribute value="jar:file:/home/cpiccion/.m2/repository/org/apache/maven/maven-model-builder/3.0/maven-model-builder-3.0-javadoc.jar!/" name="javadoc_location"/>
+    </attributes>
+  </classpathentry>
+  <classpathentry kind="var" path="M2_REPO/org/apache/maven/maven-aether-provider/3.0/maven-aether-provider-3.0.jar" sourcepath="M2_REPO/org/apache/maven/maven-aether-provider/3.0/maven-aether-provider-3.0-sources.jar">
+    <attributes>
+      <attribute value="jar:file:/home/cpiccion/.m2/repository/org/apache/maven/maven-aether-provider/3.0/maven-aether-provider-3.0-javadoc.jar!/" name="javadoc_location"/>
+    </attributes>
+  </classpathentry>
+  <classpathentry kind="var" path="M2_REPO/org/sonatype/aether/aether-api/1.7/aether-api-1.7.jar" sourcepath="M2_REPO/org/sonatype/aether/aether-api/1.7/aether-api-1.7-sources.jar">
+    <attributes>
+      <attribute value="jar:file:/home/cpiccion/.m2/repository/org/sonatype/aether/aether-api/1.7/aether-api-1.7-javadoc.jar!/" name="javadoc_location"/>
+    </attributes>
+  </classpathentry>
+  <classpathentry kind="var" path="M2_REPO/org/sonatype/aether/aether-util/1.7/aether-util-1.7.jar" sourcepath="M2_REPO/org/sonatype/aether/aether-util/1.7/aether-util-1.7-sources.jar">
+    <attributes>
+      <attribute value="jar:file:/home/cpiccion/.m2/repository/org/sonatype/aether/aether-util/1.7/aether-util-1.7-javadoc.jar!/" name="javadoc_location"/>
+    </attributes>
+  </classpathentry>
+  <classpathentry kind="var" path="M2_REPO/org/sonatype/aether/aether-impl/1.7/aether-impl-1.7.jar" sourcepath="M2_REPO/org/sonatype/aether/aether-impl/1.7/aether-impl-1.7-sources.jar">
+    <attributes>
+      <attribute value="jar:file:/home/cpiccion/.m2/repository/org/sonatype/aether/aether-impl/1.7/aether-impl-1.7-javadoc.jar!/" name="javadoc_location"/>
+    </attributes>
+  </classpathentry>
+  <classpathentry kind="var" path="M2_REPO/org/sonatype/aether/aether-spi/1.7/aether-spi-1.7.jar" sourcepath="M2_REPO/org/sonatype/aether/aether-spi/1.7/aether-spi-1.7-sources.jar">
+    <attributes>
+      <attribute value="jar:file:/home/cpiccion/.m2/repository/org/sonatype/aether/aether-spi/1.7/aether-spi-1.7-javadoc.jar!/" name="javadoc_location"/>
+    </attributes>
+  </classpathentry>
+  <classpathentry kind="var" path="M2_REPO/com/google/guava/guava/14.0.1/guava-14.0.1.jar" sourcepath="M2_REPO/com/google/guava/guava/14.0.1/guava-14.0.1-sources.jar">
+    <attributes>
+      <attribute value="jar:file:/home/cpiccion/.m2/repository/com/google/guava/guava/14.0.1/guava-14.0.1-javadoc.jar!/" name="javadoc_location"/>
+    </attributes>
+  </classpathentry>
+  <classpathentry kind="var" path="M2_REPO/junit/junit/4.0/junit-4.0.jar" sourcepath="M2_REPO/junit/junit/4.0/junit-4.0-sources.jar">
+    <attributes>
+      <attribute value="jar:file:/home/cpiccion/.m2/repository/junit/junit/4.0/junit-4.0-javadoc.jar!/" name="javadoc_location"/>
+    </attributes>
+  </classpathentry>
+  <classpathentry kind="var" path="M2_REPO/fr/x9c/ocamljava/2.0-early-access11/ocamljava-2.0-early-access11.jar"/>
+  <classpathentry kind="var" path="M2_REPO/fr/x9c/ocaml-lib-files/2.0-early-access11/ocaml-lib-files-2.0-early-access11.jar"/>
+  <classpathentry kind="var" path="M2_REPO/commons-io/commons-io/2.1/commons-io-2.1.jar" sourcepath="M2_REPO/commons-io/commons-io/2.1/commons-io-2.1-sources.jar">
+    <attributes>
+      <attribute value="jar:file:/home/cpiccion/.m2/repository/commons-io/commons-io/2.1/commons-io-2.1-javadoc.jar!/" name="javadoc_location"/>
+    </attributes>
+  </classpathentry>
+  <classpathentry kind="var" path="M2_REPO/org/apache/maven/maven-project/2.0.6/maven-project-2.0.6.jar" sourcepath="M2_REPO/org/apache/maven/maven-project/2.0.6/maven-project-2.0.6-sources.jar">
+    <attributes>
+      <attribute value="jar:file:/home/cpiccion/.m2/repository/org/apache/maven/maven-project/2.0.6/maven-project-2.0.6-javadoc.jar!/" name="javadoc_location"/>
+    </attributes>
+  </classpathentry>
+  <classpathentry kind="var" path="M2_REPO/org/apache/maven/maven-profile/2.0.6/maven-profile-2.0.6.jar" sourcepath="M2_REPO/org/apache/maven/maven-profile/2.0.6/maven-profile-2.0.6-sources.jar">
+    <attributes>
+      <attribute value="jar:file:/home/cpiccion/.m2/repository/org/apache/maven/maven-profile/2.0.6/maven-profile-2.0.6-javadoc.jar!/" name="javadoc_location"/>
+    </attributes>
+  </classpathentry>
+  <classpathentry kind="var" path="M2_REPO/org/codehaus/plexus/plexus-container-default/1.0-alpha-9-stable-1/plexus-container-default-1.0-alpha-9-stable-1.jar" sourcepath="M2_REPO/org/codehaus/plexus/plexus-container-default/1.0-alpha-9-stable-1/plexus-container-default-1.0-alpha-9-stable-1-sources.jar">
+    <attributes>
+      <attribute value="jar:file:/home/cpiccion/.m2/repository/org/codehaus/plexus/plexus-container-default/1.0-alpha-9-stable-1/plexus-container-default-1.0-alpha-9-stable-1-javadoc.jar!/" name="javadoc_location"/>
+    </attributes>
+  </classpathentry>
+  <classpathentry kind="var" path="M2_REPO/classworlds/classworlds/1.1-alpha-2/classworlds-1.1-alpha-2.jar"/>
+  <classpathentry kind="var" path="M2_REPO/org/apache/maven/maven-artifact-manager/2.0.6/maven-artifact-manager-2.0.6.jar" sourcepath="M2_REPO/org/apache/maven/maven-artifact-manager/2.0.6/maven-artifact-manager-2.0.6-sources.jar">
+    <attributes>
+      <attribute value="jar:file:/home/cpiccion/.m2/repository/org/apache/maven/maven-artifact-manager/2.0.6/maven-artifact-manager-2.0.6-javadoc.jar!/" name="javadoc_location"/>
+    </attributes>
+  </classpathentry>
+  <classpathentry kind="var" path="M2_REPO/org/apache/maven/wagon/wagon-provider-api/1.0-beta-2/wagon-provider-api-1.0-beta-2.jar" sourcepath="M2_REPO/org/apache/maven/wagon/wagon-provider-api/1.0-beta-2/wagon-provider-api-1.0-beta-2-sources.jar">
+    <attributes>
+      <attribute value="jar:file:/home/cpiccion/.m2/repository/org/apache/maven/wagon/wagon-provider-api/1.0-beta-2/wagon-provider-api-1.0-beta-2-javadoc.jar!/" name="javadoc_location"/>
+    </attributes>
+  </classpathentry>
+  <classpathentry kind="var" path="M2_REPO/org/apache/maven/maven-plugin-registry/2.0.6/maven-plugin-registry-2.0.6.jar" sourcepath="M2_REPO/org/apache/maven/maven-plugin-registry/2.0.6/maven-plugin-registry-2.0.6-sources.jar">
+    <attributes>
+      <attribute value="jar:file:/home/cpiccion/.m2/repository/org/apache/maven/maven-plugin-registry/2.0.6/maven-plugin-registry-2.0.6-javadoc.jar!/" name="javadoc_location"/>
+    </attributes>
+  </classpathentry>
+  <classpathentry kind="src" path="/ocamljava-maven-common"/>
+  <classpathentry kind="var" path="M2_REPO/fr/x9c/ocamlwrap/2.0-early-access11/ocamlwrap-2.0-early-access11.jar"/>
+  <classpathentry kind="src" path="/ocamljava-dependency-analyzer"/>
+  <classpathentry kind="var" path="M2_REPO/org/codehaus/jackson/jackson-mapper-asl/1.9.13/jackson-mapper-asl-1.9.13.jar" sourcepath="M2_REPO/org/codehaus/jackson/jackson-mapper-asl/1.9.13/jackson-mapper-asl-1.9.13-sources.jar">
+    <attributes>
+      <attribute value="jar:file:/home/cpiccion/.m2/repository/org/codehaus/jackson/jackson-mapper-asl/1.9.13/jackson-mapper-asl-1.9.13-javadoc.jar!/" name="javadoc_location"/>
+    </attributes>
+  </classpathentry>
+  <classpathentry kind="var" path="M2_REPO/org/codehaus/jackson/jackson-core-asl/1.9.13/jackson-core-asl-1.9.13.jar" sourcepath="M2_REPO/org/codehaus/jackson/jackson-core-asl/1.9.13/jackson-core-asl-1.9.13-sources.jar">
+    <attributes>
+      <attribute value="jar:file:/home/cpiccion/.m2/repository/org/codehaus/jackson/jackson-core-asl/1.9.13/jackson-core-asl-1.9.13-javadoc.jar!/" name="javadoc_location"/>
+    </attributes>
+  </classpathentry>
+  <classpathentry kind="var" path="M2_REPO/fr/x9c/ocamldep/2.0-early-access11/ocamldep-2.0-early-access11.jar"/>
+  <classpathentry kind="var" path="M2_REPO/org/apache/maven/shared/maven-invoker/2.1.1/maven-invoker-2.1.1.jar" sourcepath="M2_REPO/org/apache/maven/shared/maven-invoker/2.1.1/maven-invoker-2.1.1-sources.jar">
+    <attributes>
+      <attribute value="jar:file:/home/cpiccion/.m2/repository/org/apache/maven/shared/maven-invoker/2.1.1/maven-invoker-2.1.1-javadoc.jar!/" name="javadoc_location"/>
+    </attributes>
+  </classpathentry>
+  <classpathentry kind="src" path="/ocamljava-maven-plugin-base"/>
+  <classpathentry kind="var" path="M2_REPO/org/apache/maven/plugin-tools/maven-plugin-annotations/3.3/maven-plugin-annotations-3.3.jar" sourcepath="M2_REPO/org/apache/maven/plugin-tools/maven-plugin-annotations/3.3/maven-plugin-annotations-3.3-sources.jar">
+    <attributes>
+      <attribute value="jar:file:/home/cpiccion/.m2/repository/org/apache/maven/plugin-tools/maven-plugin-annotations/3.3/maven-plugin-annotations-3.3-javadoc.jar!/" name="javadoc_location"/>
+    </attributes>
+  </classpathentry>
 </classpath>
