--- a/ocamljava-maven-plugins/ocamljava-wrap-maven-plugin/pom.xml
+++ b/ocamljava-maven-plugins/ocamljava-wrap-maven-plugin/pom.xml
@@ -3,23 +3,17 @@
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
 		<groupId>mandelbrot</groupId>
-		<artifactId>ocamljava-maven-plugin-root</artifactId>
+		<artifactId>ocamljava-maven-plugins</artifactId>
 		<version>0.0.1-SNAPSHOT</version>
 	</parent>
-	<artifactId>ocamljava-maven-plugins</artifactId>
-	<packaging>pom</packaging>
-	<name>Ocaml Java Maven Plugins</name>
+	<artifactId>ocamljava-wrap-maven-plugin</artifactId>
+	<packaging>maven-plugin</packaging>
+	<name>Ocaml Java Wrap Maven Plugin</name>
 	<url>https://github.com/struktured/ocamljava-maven-plugin</url>
 	<prerequisites>
 		<maven>3.0</maven>
 	</prerequisites>
 	<dependencies>
-		<dependency>
-			<groupId>org.apache.maven.plugin-tools</groupId>
-			<artifactId>maven-plugin-annotations</artifactId>
-			<version>3.3</version>
-			<scope>provided</scope><!-- annotations are needed only to build the plugin -->
-		</dependency>
 		<dependency>
 			<groupId>org.apache.maven</groupId>
 			<artifactId>maven-plugin-api</artifactId>
@@ -46,10 +40,6 @@
 			<artifactId>ocamljava</artifactId>
 		</dependency>
 		<dependency>
-			<groupId>fr.x9c</groupId>
-			<artifactId>ocamlwrap</artifactId>
-		</dependency>
-		<dependency>
 			<groupId>commons-io</groupId>
 			<artifactId>commons-io</artifactId>
 		</dependency>
@@ -71,6 +61,11 @@
 			<groupId>org.apache.maven.shared</groupId>
 			<artifactId>maven-invoker</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>mandelbrot</groupId>
+			<artifactId>ocamljava-maven-plugin-base</artifactId>
+			<version>${project.version}</version>
+		</dependency>
 	</dependencies>
 	<build>
 		<plugins>
@@ -84,6 +79,10 @@
 			</plugin>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-plugin-plugin</artifactId>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-jar-plugin</artifactId>
 				<version>2.4</version>
 			</plugin>
@@ -93,33 +92,9 @@
 				<artifactId>maven-site-plugin</artifactId>
 				<version>3.3</version>
 			</plugin>
-			<plugin>
-				<inherited>true</inherited>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-plugin-plugin</artifactId>
-				<configuration>
-					<!-- see http://jira.codehaus.org/browse/MNG-5346 -->
-					<skipErrorNoDescriptorsFound>true</skipErrorNoDescriptorsFound>
-				</configuration>
-				<executions>
-					<execution>
-						<id>mojo-descriptor</id>
-						<goals>
-							<goal>descriptor</goal>
-						</goals>
-					</execution>
-					<!-- if you want to generate help goal -->
-					<execution>
-						<id>help-goal</id>
-						<goals>
-							<goal>helpmojo</goal>
-						</goals>
-					</execution>
-				</executions>
-			</plugin>
 		</plugins>
 	</build>
-	<description>This plugin provides maven integration for ocaml java. See http://ocamljava.x9c.fr for details on that specific project. The important thing to know is it's a pure java solution to integrating ocaml code with the JVM, and this project provides the necessary maven integration.</description>
+	<description>This plugin provides maven integration for ocaml java for the compiler phase. See http://ocamljava.x9c.fr for details on that specific project. The important thing to know is it's a pure java solution to integrating ocaml code with the JVM, and this project provides the necessary maven integration.</description>
 	<scm>
 		<connection>scm:git:https://github.com/struktured/ocamljava-maven-plugin.git</connection>
 		<developerConnection>scm:git:git@github.com:struktured/ocamljava-maven-plugin.git</developerConnection>
@@ -172,24 +147,5 @@
 
 		</plugins>
 	</reporting>
-	<modules>
-		<module>
-			ocamljava-maven-plugin-base
-		</module>
-	<!--	<module>
-			ocamljava-maven-plugin
-		</module> -->
-		<module>
-			ocamljava-compiler-maven-plugin
-		</module>
-		<module>
-			ocamljava-dep-maven-plugin
-		</module>
-                <module>
-			ocamljava-wrap-maven-plugin
-                </module>
-		<module>
-			ocamljava-jar-maven-plugin
-		</module>
-	</modules>
+
 </project>
