many, many fixes, still not 100%

--- a/ocamljava-plugin-test/ocamljava-lib-test/pom.xml
+++ b/ocamljava-plugin-test/ocamljava-lib-test/pom.xml
@@ -15,6 +15,19 @@
 	<build>
 		<plugins>
 			<plugin>
+				<groupId>mandelbrot</groupId>
+				<artifactId>ocamljava-dep-maven-plugin</artifactId>
+				<executions>
+					<execution>
+						<id>ocaml-dep</id>
+						<phase>process-sources</phase>
+						<goals>
+							<goal>dep</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
+			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
 				<configuration>
@@ -24,7 +37,7 @@
 			</plugin>
 			<plugin>
 				<groupId>mandelbrot</groupId>
-				<artifactId>ocamljava-maven-plugin</artifactId>
+				<artifactId>ocamljava-compiler-maven-plugin</artifactId>
 				<executions>
 					<execution>
 						<id>ocaml-compile</id>
@@ -33,6 +46,12 @@
 							<goal>compile</goal>
 						</goals>
 					</execution>
+				</executions>
+			</plugin>
+			<plugin>
+				<groupId>mandelbrot</groupId>
+				<artifactId>ocamljava-jar-maven-plugin</artifactId>
+				<executions>
 					<execution>
 						<id>ocaml-jar</id>
 						<phase>package</phase>
@@ -41,7 +60,7 @@
 						</goals>
 					</execution>
 				</executions>
-		</plugin>
+			</plugin>
 		</plugins>
 	</build>
 	<dependencies>
@@ -55,6 +74,6 @@
 			<artifactId>guava</artifactId>
 			<scope>compile</scope>
 		</dependency>
-</dependencies>
+	</dependencies>
 
 </project>
