more dependency fixes

--- a/pom.xml
+++ b/pom.xml
@@ -65,6 +65,11 @@
 				<version>${ocamljava.version}</version>
 			</dependency>
 			<dependency>
+				<groupId>fr.x9c</groupId>
+				<artifactId>ocamlc</artifactId>
+				<version>${ocamljava.version}</version>
+			</dependency>
+			<dependency>
 				<groupId>commons-io</groupId>
 				<artifactId>commons-io</artifactId>
 				<version>2.1</version>
