--- a/ocamljava-maven-plugins/ocamljava-wrap-maven-plugin/pom.xml
+++ b/ocamljava-maven-plugins/ocamljava-wrap-maven-plugin/pom.xml
@@ -34,11 +34,7 @@
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
 			<scope>test</scope>
-		</dependency>
-		<dependency>
-			<groupId>fr.x9c</groupId>
-			<artifactId>ocamljava</artifactId>
-		</dependency>
+		</dependency>		
 		<dependency>
 			<groupId>commons-io</groupId>
 			<artifactId>commons-io</artifactId>
@@ -65,6 +61,10 @@
 			<groupId>mandelbrot</groupId>
 			<artifactId>ocamljava-maven-plugin-base</artifactId>
 			<version>${project.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>fr.x9c</groupId>
+			<artifactId>ocamlwrap</artifactId>
 		</dependency>
 	</dependencies>
 	<build>
