fork the compiler, for now

--- a/ocamljava-maven-plugins/ocamljava-maven-plugin-base/pom.xml
+++ b/ocamljava-maven-plugins/ocamljava-maven-plugin-base/pom.xml
@@ -31,6 +31,10 @@
 			<artifactId>guava</artifactId>
 		</dependency>
 		<dependency>
+			<groupId>fr.x9c</groupId>
+			<artifactId>ocamljava</artifactId>			
+		</dependency>
+		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
 			<scope>test</scope>
