ocamljava 2.0 alpha1 support

--- a/ocamljava-maven-plugins/ocamljava-jar-maven-plugin/pom.xml
+++ b/ocamljava-maven-plugins/ocamljava-jar-maven-plugin/pom.xml
@@ -36,7 +36,7 @@
 			<scope>test</scope>
 		</dependency>
 		<dependency>
-			<groupId>fr.x9c</groupId>
+			<groupId>org.ocamljava</groupId>
 			<artifactId>ocamljar</artifactId>
 		</dependency>
 		<dependency>
