--- a/ocamljava-maven-plugins/ocamljava-maven-plugin-base/pom.xml
+++ b/ocamljava-maven-plugins/ocamljava-maven-plugin-base/pom.xml
@@ -31,7 +31,7 @@
 			<artifactId>guava</artifactId>
 		</dependency>
 		<dependency>
-			<groupId>fr.x9c</groupId>
+			<groupId>org.ocamljava</groupId>
 			<artifactId>ocamljava</artifactId>			
 		</dependency>
 		<dependency>
