--- a/ocamljava-maven-plugins/ocamljava-wrap-maven-plugin/pom.xml
+++ b/ocamljava-maven-plugins/ocamljava-wrap-maven-plugin/pom.xml
@@ -63,7 +63,7 @@
 			<version>${project.version}</version>
 		</dependency>
 		<dependency>
-			<groupId>fr.x9c</groupId>
+			<groupId>org.ocamljava</groupId>
 			<artifactId>ocamlwrap</artifactId>
 		</dependency>
 	</dependencies>
