--- a/ocamljava-maven-plugins/ocamljava-dep-maven-plugin/pom.xml
+++ b/ocamljava-maven-plugins/ocamljava-dep-maven-plugin/pom.xml
@@ -36,7 +36,7 @@
 			<scope>test</scope>
 		</dependency>
 		<dependency>
-			<groupId>fr.x9c</groupId>
+			<groupId>org.ocamljava</groupId>
 			<artifactId>ocamljava</artifactId>
 		</dependency>
 		<dependency>
@@ -47,8 +47,8 @@
 			<groupId>org.apache.maven</groupId>
 			<artifactId>maven-project</artifactId>
 		</dependency>
-				<dependency>
-			<groupId>fr.x9c</groupId>
+		<dependency>
+			<groupId>org.ocamljava</groupId>
 			<artifactId>ocamldep</artifactId>
 		</dependency>
 		<dependency>
