--- a/presentation/world-cup/pom.xml
+++ b/presentation/world-cup/pom.xml
@@ -8,7 +8,7 @@
 	<name>World Cup Root Test Project</name>
 
 	<properties>
-		<ocamljava.version>2.0-early-access12</ocamljava.version>
+		<ocamljava.version>2.0-alpha1</ocamljava.version>
 		<maven.compiler.source>1.7</maven.compiler.source>
 		<maven.compiler.target>1.7</maven.compiler.target>
 	</properties>
