small touch ups and experiments

--- a/ocamljava-plugin-test/ocamljava-lib-test/pom.xml
+++ b/ocamljava-plugin-test/ocamljava-lib-test/pom.xml
@@ -74,6 +74,10 @@
 			<artifactId>guava</artifactId>
 			<scope>compile</scope>
 		</dependency>
+		<dependency>
+			<groupId>org.ocamljava</groupId>
+			<artifactId>ocamldep</artifactId>
+		</dependency>
 	</dependencies>
 
 </project>
