a solution to relative path issue, but requires some extra stuff in pom which should be unnecessary

--- a/ocamljava-plugin-test/ocamljava-lib-test/pom.xml
+++ b/ocamljava-plugin-test/ocamljava-lib-test/pom.xml
@@ -78,6 +78,16 @@
 			<groupId>org.ocamljava</groupId>
 			<artifactId>ocamldep</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>org.ocamljava</groupId>
+			<artifactId>ocamljava</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.ocamljava</groupId>
+			<artifactId>ocamlrun</artifactId>
+			<version>${ocamljava.version}</version>
+		</dependency>
+
 	</dependencies>
 
 </project>
