stub for camlp4 plugin

--- a/pom.xml
+++ b/pom.xml
@@ -15,8 +15,9 @@
 		<maven.compiler.source>1.7</maven.compiler.source>
 		<maven.compiler.target>1.7</maven.compiler.target>
 		<ocamljava.version>2.0-alpha1</ocamljava.version>
-		<ocamljava.bin.path>/usr/local/bin/</ocamljava.bin.path>
-		<ocamljava.lib.path>/usr/local/lib/ocaml</ocamljava.lib.path>
+		<ocamljava.root.path>/ocamljava-${ocamljava.version}/</ocamljava.root.path>
+		<ocamljava.bin.path>${ocamljava.root.path}/bin/</ocamljava.bin.path>
+		<ocamljava.lib.path>${ocamljava.root.path}/lib/ocaml</ocamljava.lib.path>
 	</properties>
 	<dependencyManagement>
 		<dependencies>
@@ -50,22 +51,19 @@
 				<groupId>org.ocamljava</groupId>
 				<artifactId>ocamljava</artifactId>
 				<version>${ocamljava.version}</version>
-				<scope>system</scope>
-				<systemPath>${ocamljava.bin.path}/ocamljava.jar</systemPath>
+				<scope>compile</scope>
 			</dependency>
 			<dependency>
 				<groupId>org.ocamljava</groupId>
 				<artifactId>ocamljar</artifactId>
 				<version>${ocamljava.version}</version>
-				<scope>system</scope>
-				<systemPath>${ocamljava.bin.path}/ocamljar.jar</systemPath>
+				<scope>compile</scope>
 			</dependency>
 			<dependency>
 				<groupId>org.ocamljava</groupId>
 				<artifactId>ocamlwrap</artifactId>
 				<version>${ocamljava.version}</version>
-				<scope>system</scope>
-				<systemPath>${ocamljava.bin.path}/ocamlwrap.jar</systemPath>
+				<scope>compile</scope>
 			</dependency>
 			<dependency>
 				<groupId>org.ocamljava</groupId>
@@ -76,15 +74,11 @@
 				<groupId>org.ocamljava</groupId>
 				<artifactId>ocamlc</artifactId>
 				<version>${ocamljava.version}</version>
-				<scope>system</scope>
-				<systemPath>${ocamljava.bin.path}/ocamlc.jar</systemPath>
 			</dependency>
 			<dependency>
 				<groupId>org.ocamljava</groupId>
 				<artifactId>ocamlrun</artifactId>
 				<version>${ocamljava.version}</version>
-				<scope>system</scope>
-				<systemPath>${ocamljava.lib.path}/ocamlrun.jar</systemPath>
 			</dependency>
 			<dependency>
 				<groupId>commons-io</groupId>
@@ -109,6 +103,21 @@
 			<dependency>
 				<groupId>org.ocamljava</groupId>
 				<artifactId>ocamldep</artifactId>
+				<version>${ocamljava.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>org.ocamljava</groupId>
+				<artifactId>camlp4</artifactId>
+				<version>${ocamljava.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>org.ocamljava</groupId>
+				<artifactId>ocamlj</artifactId>
+				<version>${ocamljava.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>org.ocamljava</groupId>
+				<artifactId>ocamlbuild</artifactId>
 				<version>${ocamljava.version}</version>
 			</dependency>
 			<dependency>
